--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "css-loader": "^2.1.0",
     "live-server": "^1.2.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
@@ -27,6 +28,7 @@
     "babel-loader": "^8.0.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "style-loader": "^0.23.1",
     "uuid": "^3.3.2"
   }
 }
