--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/preset-react": "^7.0.0",
     "css-loader": "^2.1.0",
     "live-server": "^1.2.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
@@ -26,6 +28,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "babel-loader": "^8.0.5",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "style-loader": "^0.23.1",
