--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-syntax-highlighter": "^10.1.3",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2"
   }
