--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "live-server public",
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "npx babel src --out-dir public --presets=@babel/preset-env,@babel/preset-react",
-    "build": "npx webpack --watch",
+    "build": "npx webpack",
     "dev-server": "webpack-dev-server"
   },
   "author": "mytuny",
